--- a/package.json
+++ b/package.json
@@ -9,23 +9,30 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@koa/cors": "^3.1.0",
     "@koa/multer": "^3.0.0",
+    "bcrypt": "^5.0.1",
     "cookieparser": "^0.1.0",
     "debug": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
-    "koa-bodyparser": "^4.2.1",
+    "koa-bodyparser": "^4.3.0",
     "koa-convert": "^1.2.0",
     "koa-json": "^2.0.2",
     "koa-jwt": "^4.0.3",
     "koa-logger": "^3.2.0",
     "koa-multer": "^1.0.2",
     "koa-onerror": "^4.1.0",
+    "koa-passport": "^4.1.4",
     "koa-router": "^7.4.0",
+    "koa-session": "^6.2.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
     "mongoose": "^6.1.2",
     "multer": "^1.4.4",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.3"
   },
   "devDependencies": {
